--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "webpack serve --config ./config/webpack.config.dev.js"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "three": "^0.135.0"
   },
   "devDependencies": {
